update nutri case study

--- a/CaseStudy/Nutri.html
+++ b/CaseStudy/Nutri.html
@@ -21,8 +21,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- My CSS -->
-<link rel="stylesheet" href="/scss/main.css?ver=1">
-<link rel="stylesheet" href="/scss/casestudy.css?ver=1">
+<link rel="stylesheet" href="/scss/main.css?ver=1.1">
+<link rel="stylesheet" href="/scss/casestudy.css?ver=1.1">
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     
@@ -139,13 +139,13 @@
                             <div class="col-md-6 col-sm-12 mb-3">
                               <div class="p-4 card-pros-hor card-red">
                                 <h6>Compatibility Issues</h6>
-                                <p class="lh-base mb-2">Some PDF features may not be supported by all devices or software versions, leading to compatibility issues that can affect the viewing experience.</p>
+                                <p class="lh-base mb-0">Some PDF features may not be supported by all devices or software versions, leading to compatibility issues that can affect the viewing experience.</p>
                               </div>
                             </div>
                             <div class="col-md-6 col-sm-12 mb-3">
                               <div class="p-4 card-pros-hor card-red">
                                 <h6>Accessibility Challenges</h6>
-                                <p class="lh-base mb-2">PDFs may present accessibility challenges for users with disabilities, such as screen readers not being able to interpret the content accurately.</p>
+                                <p class="lh-base mb-0">PDFs may present accessibility challenges for users with disabilities, such as screen readers not being able to interpret the content accurately.</p>
                               </div>
                             </div>
                           </div>
@@ -187,7 +187,7 @@
                             <p class="lh-base">In the report, this is the most important page as it serves as the initial page that explains the other pages within it. <b>Therefore, I will try to explain the process of designing this page only.</b></p>
                         </div> -->
                        
-                        <p class="lh-base"> Since we already know that the most useful information is contained in the <b>Summary of Nutrients</b>, for this case study, I will just focus on the <b>Summary page.</b></p>
+                        <p class="lh-base"> Since we already know that the most useful information is contained in the <b>Summary of Nutrients</b> for this case study, I will just focus on the <b>Summary page.</b></p>
                         <div class="py-3">
                             <h4>Phase 1</h4>
                             <p class="lh-base mb-2">I explored two options for the first exploration:</p>
