update what customer says

--- a/CaseStudy/Nutri.html
+++ b/CaseStudy/Nutri.html
@@ -326,6 +326,18 @@
                             <img src="/img/StudyCase/Nutri/2.png" class="img-fluid mt-4" alt="design result">
                             <img src="/img/StudyCase/Nutri/3.png" class="img-fluid mt-4" alt="design result">
 
+                            <div class="py-5">
+                              <h4>What our customer says</h4>
+                                <p class="lh-base">Several customers were very pleased with the availability of Genetic Reports in the app. Here's one example:</p>
+                                <img src="/img/StudyCase/Nutri/img result.png" class="myImg img-fluid" alt="Final Design">
+                                <p class="text-center" style="font-size: small;color: #666666">Customers feedback</p>
+                                <!-- The Modal -->
+                                <div id="myModal" class="modal">
+                                  <img class="modal-content" id="img01">
+                                </div>
+                            </div>
+                            
+
                         </div>
                     </div>
                 </div>
